--- a/app.json
+++ b/app.json
@@ -3,7 +3,8 @@
     "pages/index/index",
     "pages/logs/logs",
     "pages/assign/assign",
-    "pages/mixin/mixin"
+    "pages/mixin/mixin",
+    "pages/showComponent/showComponent"
   ],
   "window": {
     "backgroundTextStyle": "light",
